<resources>
    <string name="app_name">Graphic Card Catalog</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear All Data</string>
    <string name="addCard">Add</string>
    <string name="removeCard">Remove</string>
    <string name="Card_Name">Name</string>
    <string name="Card_Manufactor">Manufacturer</string>
    <string name="Card_Price">Price</string>
    <string name="Card_Ram">Ram Size</string>

    <string name="Score">Score</string>
    <string name="avgFPS">Average FPS</string>
    <string name="maxFPS">Max FPS</string>
    <string name="minFPS">Min FPS</string>

    <string-array name="Sort_array">
        <item>Name</item>
        <item>Price</item>
        <item>Manufacturer</item>
        <item>Ram</item>
    </string-array>

</resources>
